--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "Walnut",
   "description": "Walnut App",
-  "version": "2",
+  "version": "1.0",
+  "manifest_version": 2,
   "app": {
     "background": {
       "scripts": ["background.js"]
