Show list of logged in users for walnut app

--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -7,5 +7,5 @@
       "scripts": ["background.js"]
     }
   },
-  "icons": { "16": "app_icon-16.png", "128": "app_icon-128.png" }
+  "icons": { "16": "logo-synapse-16.png", "128": "logo-synapse-128.png" }
 }
