Walnut app - loading of textbook imges and question content from external storage

--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -2,7 +2,7 @@
   "name": "Walnut",
   "description": "Walnut App",
   "version": "1",
-  "permissions": ["<all_urls>"],
+  "permissions": ["<all_urls>", "storage", "unlimitedStorage"],
   "app": {
     "background": {
       "scripts": ["background.js"]
