--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ wp-config.php
 wp-content/themes/walnut/walnut/dev/node_modules
 wp-content/uploads
 .idea
+wp-content/themes/walnut/walnut/dev/js/plugins/zip1.js
