--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Walnut",
-  "description": "Walnut App",
+  "name": "Synapse",
+  "description": "Synapse Android App",
   "version": "1",
   "permissions": ["<all_urls>", "storage", "unlimitedStorage"],
   "app": {
