--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ wp-content/themes/walnut/walnut/dev/node_modules
 wp-content/uploads
 .idea
 .ssh
+.bash_history
+.mysql_history
+.viminfo
+wp-content/themes/walnut/csvupload/
