--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -1,18 +1,20 @@
 {
   "name": "Synapse Staging",
   "description": "Synapse Android App",
-  "version": "Staging-0.5.0.09",
+
+  "version": "Staging-0.5.1.00",
+
   "permissions": ["<all_urls>", "storage", "unlimitedStorage"],
+
   "app": {
-    "background": {
-      "scripts": ["background.js"]
-    }
+    "background": { "scripts": ["background.js"] }
   },
-  "icons": {"16": "logo-synapse-16.png", 
-            "36": "logo-synapse-36.png",
-            "48": "logo-synapse-48.png",
-            "72": "logo-synapse-72.png",
-            "96": "logo-synapse-96.png",
-            "144": "logo-synapse-144.png",
-            "192": "logo-synapse-192.png"}
+
+  "icons": {"16": "logo/logo-synapse-16.png", 
+            "36": "logo/logo-synapse-36.png",
+            "48": "logo/logo-synapse-48.png",
+            "72": "logo/logo-synapse-72.png",
+            "96": "logo/logo-synapse-96.png",
+            "144": "logo/logo-synapse-144.png",
+            "192": "logo/logo-synapse-192.png"}
 }
