--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -5,7 +5,7 @@
   "description": "Synapse Android App",
 
   "version": "Staging-0.5.2.03",                      // [Synapse Staging Version]
-  // "version": "Production-0.5.2.03",                   // [Synapse Production Version]
+  "version": "Production-0.5.2.03",                   // [Synapse Production Version]
 
   "permissions": ["<all_urls>", "storage", "unlimitedStorage"],
 
