--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Synapse Staging",                           // [Synapse Staging Build]
+  "name": "Synapse Teacher Training App",              // [Synapse Staging Build]
   // "name": "Teacher Training App - Synapse Learning",   // [Synapse Production Build]
 
   "description": "Synapse Android App",
