--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -4,8 +4,8 @@
 
   "description": "Synapse Android App",
 
-  // "version": "Staging-0.5.0.05",                      // [Synapse Staging Version]
-  "version": "0.0.1",
+  "version": "Staging-0.5.0.06",                      // [Synapse Staging Version]
+  // "version": "0.5.0.06",
   // "version": "Production-0.5.0.01",                   // [Synapse Production Version]
 
   "permissions": ["<all_urls>", "storage", "unlimitedStorage"],
