--- a/wp-content/themes/walnut/walnut/manifest.mobile.json
+++ b/wp-content/themes/walnut/walnut/manifest.mobile.json
@@ -1,6 +1,6 @@
 {
-  "packageId": "com.synapse.studentsapp.edu",         // [Synapse Staging Package]
-  // "packageId": "com.synapse.learning",    // [Synapse Production Package]
+  // "packageId": "com.synapse.studentsapp.edu",         // [Synapse Staging Package]
+  "packageId": "com.synapse.learning",    // [Synapse Production Package]
   "versionCode": 1,
   "CFBundleVersion": "1.1.1"
 }
