--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -4,9 +4,9 @@
 
 	"description": "Synapse Android App",
 
-	// "version": "Staging-0.1.0",                      // [Synapse Staging Version]
+	"version": "Staging-0.1.0",                      // [Synapse Staging Version]
 	// "version": "0.5.0.06",
-	"version": "Production-0.0.1",                   // [Synapse Production Version]
+	// "version": "Production-0.0.1",                   // [Synapse Production Version]
 
 	"permissions": ["<all_urls>", "storage", "unlimitedStorage"],
 
