--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -1,11 +1,11 @@
 {
-  // "name": "Synapse Teacher Training App",              // [Synapse Staging Build]
-  "name": "Teacher Training App - Synapse Learning",   // [Synapse Production Build]
+  "name": "Synapse Teacher Training App",              // [Synapse Staging Build]
+  // "name": "Teacher Training App - Synapse Learning",   // [Synapse Production Build]
 
   "description": "Synapse Android App",
 
-  // "version": "Staging-0.1.0",                      // [Synapse Staging Version]
-  "version": "Production-0.0.8",                   // [Synapse Production Version]
+  "version": "Staging-0.1.0",                      // [Synapse Staging Version]
+  // "version": "Production-0.0.8",                   // [Synapse Production Version]
 
   "permissions": ["<all_urls>", "storage", "unlimitedStorage"],
 
