--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -1,12 +1,12 @@
 {
-	// "name": "Synapse Student Staging",                           // [Synapse Staging Build]
-	"name": "Synapse Student App - Synapse Learning",   // [Synapse Production Build]
+	"name": "Synapse Student Staging",                           // [Synapse Staging Build]
+	// "name": "Synapse Student App - Synapse Learning",   // [Synapse Production Build]
 
 	"description": "Synapse Android App",
 
-	// "version": "Staging-0.1.0",                      // [Synapse Staging Version]
+	"version": "Staging-0.1.1",                      // [Synapse Staging Version]
 	// "version": "0.5.0.06",
-	"version": "Production-0.0.2",                   // [Synapse Production Version]
+	// "version": "Production-0.0.2",                   // [Synapse Production Version]
 
 	"permissions": ["<all_urls>", "storage", "unlimitedStorage"],
 
