--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ wp-content/uploads
 composer.phar
 wp-content/themes/walnut/vendor
 wp-content/themes/walnut/csvupload
-
+wp-content/debug.log
 
 
 /nbproject
