--- a/wp-content/themes/walnut/walnut/manifest.json
+++ b/wp-content/themes/walnut/walnut/manifest.json
@@ -4,7 +4,7 @@
 
   "description": "Synapse Android App",
 
-  "version": "Staging-0.1.0",                      // [Synapse Staging Version]
+  "version": "0.0.4",                      // [Synapse Staging Version]
   // "version": "Production-0.0.8",                   // [Synapse Production Version]
 
   "permissions": ["<all_urls>", "storage", "unlimitedStorage"],
