--- a/wp-content/themes/walnut/walnut/manifest.mobile.json
+++ b/wp-content/themes/walnut/walnut/manifest.mobile.json
@@ -1,6 +1,17 @@
 {
-  "packageId": "com.synapse.edu",         // [Synapse Staging Package]
-  // "packageId": "com.synapse.learning",    // [Synapse Production Package]
-  "versionCode": 10,
-  "CFBundleVersion": "1.1.1"
+  "packageId": "com.synapse.edu",
+  // "packageId": "com.synapse.learning",
+  
+  // Android-only overrides here (e.g. icons, name, version)
+  "android": {
+  },
+  // iOS-only overrides here (e.g. icons, name, version)
+  "ios": {
+  },
+  // Uncomment to use system WebView rather than Crosswalk
+  "webview": "system",
+  // Uncomment to enable use of eval()
+  // "cspUnsafeEval": true,
+  // Uncomment to enable use of inline <script>
+  // "cspUnsafeInline": true,
 }
