--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .htaccess
 wp-config.php
+wp-config2.php
 wp-content/themes/walnut/walnut/dev/node_modules
 wp-content/uploads
 .idea
@@ -12,6 +13,7 @@ wp-content/uploads
 composer.phar
 wp-content/themes/walnut/csvupload
 wp-content/debug.log
+tmp
 
 
 /nbproject
